--- a/public/regagal.html
+++ b/public/regagal.html
@@ -266,7 +266,7 @@ form:after {
 }
 
 .button2{
-    background-color: #008CBA;
+    background-color: red;
     font-size: 24px;
     padding: 32px 16px;
     border-radius: 12px;
@@ -287,16 +287,16 @@ form:after {
  <div class="container">
     <section id="content">
         <form method="POST" action="/">
-            <h1>Login Status</h1>
+            <h1>Register Status</h1>
             <div class="button2">
-                <p>Login Success!</p>
+                <p>Register Failed!</p>
+            </div>
+            <div>
+               
             </div>
             <div> 
-                <a href="home.html"><input type="button" value="Log Out"/></a>
+                <a href="/login"><input type="button" value="Try Again"/></a>
             </div>
-           <br>
-           <br>
-           <a href="">
         </form><!-- form -->
         
     </section><!-- content -->
