--- a/public/regsukses.html
+++ b/public/regsukses.html
@@ -287,16 +287,16 @@ form:after {
  <div class="container">
     <section id="content">
         <form method="POST" action="/">
-            <h1>Login Status</h1>
+            <h1>Register Status</h1>
             <div class="button2">
-                <p>Login Success!</p>
+                <p>Register Success!</p>
             </div>
             <div> 
-                <a href="home.html"><input type="button" value="Log Out"/></a>
+                <a href="/"><input type="button" value="Log Out"/></a>
             </div>
            <br>
            <br>
-           <a href="">
+         
         </form><!-- form -->
         
     </section><!-- content -->
