--- a/public/gagalogin.html
+++ b/public/gagalogin.html
@@ -286,7 +286,7 @@ form:after {
 <body>
  <div class="container">
     <section id="content">
-        <form method="POST" action="/">
+        <!-- <form method="POST" action="/login"> -->
             <h1>Login Status</h1>
             <div class="button2">
                 <p>Login Failed!</p>
@@ -295,9 +295,10 @@ form:after {
                
             </div>
             <div> 
-                <a href="login.html"><input type="button" value="Try Again"/></a>
+                <a href="/login"><input type="button" value="Try Again"/></a>
             </div>
-        </form><!-- form -->
+        <!-- </form> -->
+        <!-- form -->
         
     </section><!-- content -->
 </div><!-- container -->
