--- a/public/login.html
+++ b/public/login.html
@@ -269,13 +269,13 @@ form:after {
 <body>
  <div class="container">
     <section id="content">
-        <form method="POST" action="/">
+        <form method="POST" action="/login">
             <h1>Login Form</h1>
             <div>
-                <input type="text" placeholder="Username" required="" id="username" />
+                <input type="text" placeholder="Username" required="" name="user_name" id="user_name" />
             </div>
             <div>
-                <input type="password" placeholder="Password" required="" id="password" />
+                <input type="password" placeholder="Password" required=""  name="password" id="password" />
             </div>
             <div>
                 <input type="submit" value="Log in" />
