--- a/public/regsukses.html
+++ b/public/regsukses.html
@@ -286,18 +286,19 @@ form:after {
 <body>
  <div class="container">
     <section id="content">
-        <form method="POST" action="/">
+        <!-- <form method="POST" action="/"> -->
             <h1>Register Status</h1>
             <div class="button2">
                 <p>Register Success!</p>
             </div>
             <div> 
-                <a href="/"><input type="button" value="Log Out"/></a>
+                <a href="/logout"><input type="button" value="Log Out"/></a>
             </div>
            <br>
            <br>
          
-        </form><!-- form -->
+        <!-- </form> -->
+        <!-- form -->
         
     </section><!-- content -->
 </div><!-- container -->
