--- a/public/sukseslogin.html
+++ b/public/sukseslogin.html
@@ -292,7 +292,7 @@ form:after {
                 <p>Login Success!</p>
             </div>
             <div> 
-                <a href="/"><input type="button" value="Log Out"/></a>
+                <a href="/logout"><input type="button" value="Log Out"/></a>
             </div>
            <br>
            <br>
